# mk-xplorer

./: .gitignore  README.md  pyproject.toml  test.py
mk_xplorer/: __init__.py  lexer.py  makefile.py  parser.py
tests/: test_lexer.py  test_parser.py
